resolved grid overflow issue by limiting image height, added view_all_projects button at end of home page.

--- a/style.css
+++ b/style.css
@@ -16,14 +16,14 @@
 body {
   background-color: #e6f2f7;
   color: #002245;
-  font-family: RobotoSlab_regular, Geneva, Tahoma, sans-serif;
+  font-family: RobotoSlab_regular,  sans-serif;
   display: flex;
   flex-direction: column;
 }
 
 header {
   height: 20%;
-  font-family: RobotoSlab_light;
+  font-family: RobotoSlab_light, sans-serif;
   /* position: -webkit-sticky;
     position: sticky;   
     top: 0; */
@@ -46,17 +46,17 @@ header {
   color: #002245;
   align-items: center;
   margin: 0% 0.5%;
-  padding: 0.5%;
+  padding: 8px;
   position: relative;
 }
 
 /* Sets the properties for hyper links */
 a {
   text-decoration: none;
-  color: #002245;
+  color:inherit;
 }
 
-a::after {
+.nav_item::after {
   content: "";
   position: absolute;
   width: 100%;
@@ -68,7 +68,7 @@ a::after {
   transform-origin: bottom right;
   transition: transform 0.25s ease-out;
 }
-a:hover::after {
+.nav_item:hover::after {
   transform: scaleX(1);
   transform-origin: bottom left;
   color: #002245;
@@ -94,6 +94,7 @@ main {
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-items: center;
   margin-top: 5%;
 }
 .intro {
@@ -142,21 +143,13 @@ main {
   font-size: x-large;
 }
 
-.project_list {
-  display: flex;
-  flex-direction: column wrap;
-  justify-content: center;
-  align-items: center;
-  width: 75%;
-  border-radius: 10px;
-  margin-top: 5%;
-}
 .project_grid {
-    width: 100%;
+
+    width: 75%;
   display: grid;
   grid-template-columns: 47.5% 47.5%;
-  grid-template-rows: auto auto;
   gap: 5%;
+  margin-top: 5%;
 }
 
 .fig1{
@@ -168,6 +161,7 @@ main {
 .figure {
     width: 100%;
   height: auto;
+  max-height: 100%; 
   display: flex;
   flex-direction: column;
   overflow: hidden;
@@ -176,7 +170,7 @@ main {
   border-radius: 10px;
   align-items: center;
   justify-content:end;
-  
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   background-size: 100% 100%;
   background-position: center; 
   transition: background-size 0.2s;}
@@ -205,6 +199,22 @@ main {
     padding: 2%;
 }
 
+.view_all_projects{
+  font-size: 110%;
+  font-family: RobotoSlab_light, sans-serif;
+  font-weight: bold;
+  padding: 1%;
+  margin: 5%;
+  border: #0087ca solid ;
+  background-color:#0087ca0b  ;
+  border-radius: 30px;
+  transition: font-size 0.2s;
+}
+
+.view_all_projects:hover{
+  font-size: 120%;
+} 
+
 @media only screen and (max-width: 700px) {
   .header {
     display: flex;
@@ -222,9 +232,19 @@ main {
   .project_grid {
     display: grid;
     grid-template-columns: 100%;
+    grid-template-rows: auto;
+    margin-bottom: 5%;
+    justify-self: stretch;
   }
   .project_description{
     visibility: visible;
+    font-size:80%;
+}
 
+.view_all_projects{
+  padding: 1% 3%;
 }
 }
+
+
+
